--- a/.github/workflows/ci-comprehensive.yml
+++ b/.github/workflows/ci-comprehensive.yml
@@ -44,6 +44,9 @@ jobs:
         with:
           name: test-results
           path: test-results.xml
+      - name: Skip steps requiring secrets on forks
+        if: ${{ github.event.pull_request.head.repo.fork == true }}
+        run: echo "Fork PR detected: skipping secret-dependent steps."
 
   supabase_check:
     runs-on: ubuntu-latest
@@ -73,6 +76,9 @@ jobs:
               fi
             fi
           done
+      - name: Skip Supabase operations on forks
+        if: ${{ github.event.pull_request.head.repo.fork == true }}
+        run: echo "Fork PR detected: skipping Supabase operations that require secrets."
 
   security_scan:
     runs-on: ubuntu-latest
