--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "type": "commonjs",
   "engines": { "node": ">=20" },
+  "packageManager": "pnpm@8.15.0",
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
     "lint": "eslint .",
+    "test": "echo 'No tests configured yet' && exit 0",
     "test:ping": "curl -s http://localhost:3000/health || true",
     "test:run": "curl -s -X POST http://localhost:3000/pipeline/run -H 'content-type: application/json' -d '{\"projectSpec\":{\"name\":\"labs-demo\"}}' || true",
     "deploy": "pnpm build && supabase db push && supabase functions deploy --no-verify-jwt",
