--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "ES2020",
-    "moduleResolution": "Node",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "rootDir": "src",
     "outDir": "dist",
+    "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "strict": true
+    "skipLibCheck": true
   },
   "include": ["src"]
 }
