--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "packageManager": "pnpm@8.15.0",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc",
+    "build": "tsc && tailwindcss -i ./src/styles/globals.css -o ./dist/styles.css --minify",
+    "build:css": "tailwindcss -i ./src/styles/globals.css -o ./dist/styles.css",
     "start": "node dist/server.js",
     "lint": "eslint .",
     "test": "echo 'No tests configured yet' && exit 0",
@@ -33,11 +34,14 @@
     "@types/archiver": "^6.0.3",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.19.0",
-    "typescript": "^5.5.4",
+    "autoprefixer": "^10.4.16",
     "eslint": "^9.9.0",
     "@typescript-eslint/eslint-plugin": "^8.0.1",
-    "@typescript-eslint/parser": "^8.0.1"
+    "@typescript-eslint/parser": "^8.0.1",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.0",
+    "typescript": "^5.5.4"
   }
 }
