Update .gitignore with comprehensive patterns
- Add build cache directories
- Add log files and OS files
- Add environment file patterns
- Add Vercel local files
- Add export/bundle files (.zip)
- Exclude .env.example explicitly

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,18 @@
-node_modules
-dist
-tmp
-.env
+# build + caches
+node_modules/
+dist/
+tmp/
+*.log
+.DS_Store
 
+# env files — never commit secrets
+.env
+.env.*
+!.env.example
+
+# vercel local project files
 .vercel
-.env*.local
+.vercelignore
+
+# exports / bundles
+*.zip
